--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -9,52 +9,14 @@ html {
           box-sizing: inherit;
 }
 
-/* Set height of body and the document to 100% to enable "full page tabs" */
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial;
+h1 {
+  text-align: center;
 }
-
-/* Style tab links */
-.headertab {
-  background-color: #555;
-  color: white;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  font-size: 17px;
-  width: 25%;
-}
-
-.headertab:hover {
-  background-color: #777;
-}
-
-/* Style the tab content (and add height:100% for full page content) */
-.tabcontent {
-  color: white;
-  display: none;
-  padding: 100px 20px;
-  height: 100%;
-}
-
-#Home {background-color: white;}
-#Blog {background-color: green;}
-#Contact {background-color: blue;}
-#About {background-color: orange;}
-#YouTube {background-color: red;}
-#Projects {background-color: purple;}
-
-
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   line-height: 1.4;
   margin: 0px;
   padding: 0px;
   background-color: rgb(9, 9, 80);
-  color: white;
+  color: rgb(19, 170, 19);
 }
-/*# sourceMappingURL=style.css.map */
