--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -9,6 +9,16 @@ html {
           box-sizing: inherit;
 }
 
+.titleCard {
+
+  border: 2px solid whitesmoke;
+  border-radius: 5px;
+  margin: 10px 5px;
+  padding: 4px;
+  background-color: rgba(45,45,45,0.5);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
 .fullCard {
 
   border: 1px solid whitesmoke;
