--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -45,8 +45,28 @@ html {
   font-weight: 50;
 }
 
+#navbar {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  
+  
+      width: 100%;
+      background-color: #767676;
+    }
+
+nav ul {
+  margin: 0px;
+  padding: 5px 0px 5px 30px;
+}
+nav li {
+  display: inline;
+}
+
 h1 {
   text-align: center;
+  position: relative;
+  top: 5px;
 }
 
 p {
