--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -24,7 +24,7 @@ html {
   width: 245px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin: 10px 5px;
+  margin: auto;
   padding: 20px;
   box-shadow: 0 10px 20px rgba(255,255,255,0.19), 0 6px 6px rgba(255, 255, 255, 0.23);
 
