--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -8,8 +8,9 @@ html {
   border-radius: 5px;
   margin: 10px 5px;
   padding: 4px;
-  background-color: rgba(45,45,45,0.5);
+  background: linear-gradient(35deg,#CCFFFF,#FFCCCC);
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
 }
 
 .fullCard {
@@ -27,12 +28,10 @@ html {
   margin: auto;
   padding: 20px;
   box-shadow: 0 10px 20px rgba(255,255,255,0.19), 0 6px 6px rgba(255, 255, 255, 0.23);
+  background: linear-gradient(35deg,#CCFFFF,#FFCCCC);
 
 }
 
-.projectCard:hover{
-  color:rgb(179, 226, 179)
-}
 
 .projectContent {
   padding: 10px;
@@ -74,10 +73,9 @@ p {
 }
 
 body {
-  font-family:  Arial, sans-serif;
+  font-family: 'Catamaran', sans-serif;
   line-height: 25px;
   margin: 0px;
   padding: 0px;
-  background-color: rgb(2, 2, 31);
-  color: #763698;
+  background-color: (#CCFFFF);
 }
