--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -62,6 +62,7 @@ nav li {
   display: inline;
 }
 
+
 h1 {
   text-align: center;
   position: relative;
@@ -78,4 +79,7 @@ body {
   margin: 0px;
   padding: 0px;
   background-color: (#CCFFFF);
+}
+div:hover{
+  transform: scale(2);
 }
