--- a/App/CSS/style.css
+++ b/App/CSS/style.css
@@ -29,6 +29,7 @@ html {
   padding: 20px;
   box-shadow: 0 10px 20px rgba(255,255,255,0.19), 0 6px 6px rgba(255, 255, 255, 0.23);
   background: linear-gradient(35deg,#CCFFFF,#FFCCCC);
+  position:absolute;
 
 }
 
@@ -81,5 +82,5 @@ body {
   background-color: (#CCFFFF);
 }
 div:hover{
-  transform: scale(2);
+  transform: scale(1.1);
 }
